--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PenerjemahanIsyarat">
+    tools:context=".features.penerjemahanisyarat.PenerjemahanIsyarat">
 
     <View
         android:id="@+id/screenFlashOverlay"
