--- a/app/src/main/res/layout/activity_teks_ke_video.xml
+++ b/app/src/main/res/layout/activity_teks_ke_video.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeksKeVideo">
+    tools:context=".features.tekskevideo.TeksKeVideo">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
