--- a/app/src/main/res/layout/activity_materi_edukasi.xml
+++ b/app/src/main/res/layout/activity_materi_edukasi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".features.materiedukasi.data.MateriEdukasi">
+    tools:context=".features.materiedukasi.data.MateriEdukasiEntity">
 
     <!-- Button Back -->
     <ImageButton
@@ -57,17 +57,18 @@
     </LinearLayout>
 
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="522dp"
-    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-    tools:layout_editor_absoluteX="-3dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="@id/linearLayout2"
+        tools:layout_editor_absoluteX="-3dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerMateri"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"/>
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp" />
 
     </LinearLayout>
 
