--- a/app/src/main/res/layout/activity_materi_edukasi.xml
+++ b/app/src/main/res/layout/activity_materi_edukasi.xml
@@ -63,7 +63,8 @@ android:layout_height="522dp"
 app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
 tools:layout_editor_absoluteX="-3dp">
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    android:id="@+id/EdukasiSubab"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
